# gyrfalcon-example-projects

./: .gitignore  Makefile  README.md  config_rv32.mk  config_rv64.mk
.theia/: launch.json  settings.json  tasks.json
cmake-example/: .gitignore  CMakeLists.txt  example.elf
dhrystone/: .gitignore  Makefile  dhry.h  dhrystone.elf
fibonacci/: Makefile
fibonacci/src/: fibonacci.c
hanoi/: Makefile
hanoi/src/: hanoi.c
lm_bench/: main.cpp
mandelbrot/: .gitignore  Makefile  ae.conf.json  dasm.txt  mandelbrot.elf  mandelbrot_O0.elf  mandelbrot_O1.elf  mandelbrot_O2.elf  mandelbrot_O3.elf
mandelbrot/src/: iterator.c  mandel.h  mandelbrot.c  raster.c
matmul/: .gitignore  Makefile
matmul/src/: matmul.c
memcpy/: Makefile  ae.conf.json
memcpy/src/: memcpy.c
memwalk/: Makefile
memwalk/src/: memwalk.c  trace_macros.h
motor/: .gitignore  Makefile  README.md  add.s  main.c  main2.c  main32.elf  main32.elf.zstf  main32_zba_zbb.elf  main32_zba_zbb_c.elf  main64.elf  new.s
not-ready/: README.md
not-ready/motor/: .gitignore  add.c  fmove.c  strlen.c  test.c  test2.c
not-ready/rtree/: Makefile  main.c  rtree.h  rtree.s
primes/: Makefile  primes.elf
primes/include/: prime.h
primes/src/: primes.c  test-prime.c  trace_macros.h
random-elf-files/: coremark_rv32.elf  cyclo_isr_32.elf
report-definitions/: alu_usage.def  alu_usage.yaml  core_stats.def  inst_counts.json  memory_usage.def  memory_usage.yaml
rtree/: Makefile  main.c  rtree  rtree.c
stress/: Makefile
stress/src/: main.c
